# study

TKJunQiPK/: .clang-format  .gitignore
TKJunQiPK/Doc/: InitChess_JunQiPK.ini  TKJunQiPK.proto  build.bat  军棋游戏服务埋点需求.docx  军棋算法实现.doc  录相方式说明书_二人军棋 .doc  棋类录像信息库.xlsx  游戏属性串配置说明书_军棋.doc
TKJunQiPK/TKJunQiPKBot/: TKJunQiPKBot.cpp  TKJunQiPKBot.h  TKJunQiPKBot.rc  TKJunQiPKBot.vcxproj  TKJunQiPKBot.vcxproj.filters  TKJunQiPKBotAI.cpp  TKJunQiPKBotAI.h  TKJunQiPKBotDefine.h  resource.h  stdafx.cpp  stdafx.h
TKJunQiPK/TKJunQiPKSvr/: TKJunQiCore.cpp  TKJunQiCore.h  TKJunQiPKCfg.cpp  TKJunQiPKCfg.h  TKJunQiPKData.cpp  TKJunQiPKData.h  TKJunQiPKDefine.h  TKJunQiPKGame.cpp  TKJunQiPKGame.h  TKJunQiPKService.cpp  TKJunQiPKService.h  TKJunQiPKSvr.rc  TKJunQiPKSvr.vcxproj  TKJunQiPKSvr.vcxproj.filters  TKJunQiPlayer.cpp  TKJunQiPlayer.h  TKJunQiUtils.h  resource.h  stdafx.cpp  stdafx.h
TKJunQiPK/TKProto/: TKJunQiPK.pb.cc  TKJunQiPK.pb.h
TKMahjongLYGCAI/TKMahjongLYGCBot/: BotAction.cpp  BotAction.h  LYGCAI.cpp  LYGCAI.h  LYGCBot.cpp  LYGCBot.h  LYGCBotDefine.h  LYGCTableData.cpp  LYGCTableData.h
TKMahjongLYGCAI/TKMahjongLYGCSvr/: LYGCDealer.cpp  LYGCDealer.h  LYGCGame.cpp  LYGCGame.h  LYGCHu.cpp  LYGCHu.h  LYGCMessager.cpp  LYGCMessager.h  LYGCPlay.cpp  LYGCPlay.h  LYGCPlayData.cpp  LYGCPlayData.h  LYGCRecord.cpp  LYGCRecord.h  State.cpp  State.h  StateDiscard.cpp  StateDiscard.h  StateResult.cpp  StateWait.h  (+2 more)
auto/: CMakeLists.txt  auto.cpp
net/: client.c  epoll.c  poll.c  select.c
threadpool/: CMakeLists.txt  epoll.cpp  main.cpp  test.md  threadpool.cpp  threadpool.h
(+118 files in other folders)
